feat(core): 完成下载房间单画面接口
